2009-07-08  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/providers/composite/calCompositeCalendar.js
	(getItems): instead of testing each calendar to see whether it's
	ready, we only take the "readyCalendars" into account. This
	enables views to receive an onOperationComplete event when no
	calendar is available yet.
	(calCompositeGetListenerHelper): the amount of pending requests
	depends on the amount of enabled calendars that are declared ready.
	(readyCalendars): new accessor that returns the amount of enabled
	calendars that are declared ready.

2009-07-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/src/calDavCalendar.js: the observe method was
	modified to handle the new "caldav-acl-reset" notification. The
	code was also simplified by triggering a refresh whenever the
	mACLRefreshData ivar is set.
	Completed the webdav sync implementation by handling the case
	where a 403 error code would be return with a "valid-sync-token"
	DAV error.

2009-07-06  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/providers/composite/calCompositeCalendar.js: when
	calendars implement calISyncCalendar, we don't allow getItems
	operations on them as long as they are not "loaded".

	* src/calendar/base/src/calDavCalendar.js: bypass safeRefresh as
	long as the ACLs are not loaded (Inverse edition).

2009-07-03  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/agenda-listbox.js
	(deleteItemsFromCalendar): we cannot duplicate the array of nodes
	with Array.splice with Mozilla 1.8, therefore we wander the
	nodeList reversely.

2009-07-03  Ludovic Marcotte <lmarcotte@inverse.ca>

	* Added patch for bug #453145

2009-07-02  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/src/calDavCalendar.js (safeRefresh): fixed
	issues with unavailable calendars. (#502014)

2009-06-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/src/calIcsParser.js: added a new